2007-07-17  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Better error handling for MySQL
	native driver (EJAB-224).

2007-07-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Added remove_connection/3
	* src/ejabberd_s2s_out.erl: Bugfix: remove only own s2s record

2007-07-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Bounce packets after unregistering s2s
	connection, not before

2007-07-11  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_echo.erl: mod_echo does not reply to other
	components. This is to make sure that a component will not
	discover its own capabilities (Thanks to Badlop) (EJAB-281).
	* src/ejabberd.cfg: disable mod_echo in the example config
	file. mod_echo is mainly a development/test module.

2007-07-09  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/mssql.sql: Nickname cannot be null in rosterusers table
	(MSSQL)
	* src/odbc/mysql.sql: Likewise
	* src/odbc/pg.sql: Likewise

2007-06-29  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_config.erl: Normalize hostnames in config file. If mixed
	case is used, the hostname will be now useable (EJAB-277).
	* src/stringprep/stringprep_sup.erl: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/stringprep/Makefile.win32: Likewise
	* src/ejabberd_app.erl: Likewise

2007-06-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_auth_anonymous.erl: Do not purge non anonymous accounts
	when using anonymous authentication with another type of auth.

	* src/ejabberd_service.erl: Added an option to disable from attribute
	checks in packets coming from an external component (EJAB-275)
	* doc/guide.tex: Likewise

	* doc/guide.tex: Documentation rework started (EJAB-272)
	* doc/introduction.tex: Likewise

2007-06-28  Christophe Romain <christophe.romain@process-one.net>

	* src/web/ejabberd_web_admin.erl: corrects (EJAB-273),
	remove obsolete OnlineUsers calculation
