@@ -1,5 +1,8 @@
 2007-07-17  Mickael Remond  <mickael.remond@process-one.net>
 
+	* src/ejabberd_s2s_out.erl: Improved place of the INFO /
+	DEBUG printout.
+
 	* src/odbc/ejabberd_odbc.erl: Better error handling for MySQL
 	native driver (EJAB-224).
 
